PostLink icon wrap fix

--- a/src/components/PostLink.css
+++ b/src/components/PostLink.css
@@ -11,6 +11,20 @@
 	min-height: 1em;
 }
 
+/* This is a fix for preventing the link icon
+   from staying on the previous line while the
+   link text being placed on the next line
+   due to wrapping in case of long unbreakable links. */
+/* https://snook.ca/archives/html_and_css/icon-wrap-after-text */
+.post__link-icon__wrap-fix {
+	white-space: nowrap;
+}
+
+.post__link-icon {
+	/* This "negative" margin compensates the width added by "&nbsp;". */
+	margin-right: -0.05em;
+}
+
 .service-icon {
 	color: var(--Content-color-900);
 }
